--- a/styles/contato.css
+++ b/styles/contato.css
@@ -21,7 +21,7 @@
 }
 
 .contato__email{
-    padding: 1.1em;
+    padding: 1.3em 1em;
     border: 1px solid var(--azul);
     border-radius: 24px;
     width: 90%;
