--- a/styles/contato.css
+++ b/styles/contato.css
@@ -21,7 +21,7 @@
 }
 
 .contato__email{
-    padding: 1.3em 1em;
+    padding: 1em;
     border: 1px solid var(--azul);
     border-radius: 24px;
     width: 90%;
@@ -32,5 +32,6 @@
     font-family: var(--fonte-principal);
     color:  var(--azul);
     background: url("../img/email.svg") no-repeat;
+    background-size: 1.6em;
     padding-left: 2em;
 }
