--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url("styles/contato.css");
 @import url("styles/rodape.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 :root{
     --cor-fundo: #ebecee;
@@ -13,6 +14,8 @@
     --azul-degrade: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);;
     --fonte-principal: 'Poppins', sans-serif;
     --azul: #002F52;
+    --fonte-secundaria: 'Josefin Sans', sans-serif;
+    --preto: #000000;
 }
 
 *{
