--- a/styles/banner.css
+++ b/styles/banner.css
@@ -35,3 +35,17 @@
     background-position: 1em;
     text-align: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo{
+        font-size: 36px;
+    }
+
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 7em;
+    }
+}
