--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -78,3 +78,28 @@
     gap: 0.2em;
     margin-bottom: 0.5em;
 }
+
+@media screen and (min-width: 1024px){
+    .carrossel__titulo{
+        font-size: 26px;
+    }
+
+    .swiper-pagination{
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper{
+        width: 60%;
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev{
+        display: block;
+        top: 60%;
+    }
+
+    .card{
+        width: 40%;
+        margin: 2em auto;
+    }
+}
