--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --azul: #002F52;
     --fonte-secundaria: 'Josefin Sans', sans-serif;
     --preto: #000000;
+    --cinza: #464646;
+    --cinza-claro: #858585;
 }
 
 *{
