--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -8,3 +8,40 @@ hr{
     background-color: var(--branco);
     padding: 1em;
 }
+
+.lista-rodape{
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .rodape{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .lista-rodape__titulo{
+        margin-bottom: 1em;
+        font-size: 14px;
+        color: var(--cinza-claro);
+    }
+
+    .lista-rodape__item{
+        display: flex;
+        align-items: center;
+        margin-bottom: 0.6em;
+    }
+
+    .lista-rodape__link{
+        color: var(--cinza);
+        text-decoration: none;
+        margin-left: 0.6em;
+    }
+
+    .rodape__titulo{
+        font-size: 24px;
+    }
+
+    .lista-rodape{
+        display: block;
+    }
+}
