--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -44,4 +44,8 @@ hr{
     .lista-rodape{
         display: block;
     }
+
+    .lista-rodape__titulo{
+        text-transform: uppercase;
+    }
 }
