--- a/styles/contato.css
+++ b/styles/contato.css
@@ -55,6 +55,10 @@
         margin-right: 1em;
         width: 30%;
     }
+}
 
-
+@media screen and (min-width:1728px){
+    .contato {
+        padding: 3em 20vw;
+    }
 }
